<resources>
    <string name="app_name">QuickServe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="select_rest">Select Restaurant</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_chef_sign_in">Sign in as chef</string>
    <string name="action_waiter_sign_in">Sign in as staff</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_flash_screen">flashScreenActivity</string>
    <string name="dummy_button">Click to Continue</string>
    <string name="dummy_content">Restaurant\nOrdering\nSystem</string>
    <string name="title_bill_summary">Bill Summary</string>
    <string name="title_activity_table_menus">Table Menus</string>
    <string name="order_summary">Order Summary</string>
    <string name="bill_details">Bill Details</string>
    <string name="search_table">Search Table</string>
    <string name="search_order">Search Order</string>
    <string name="filter_table">Filter Table</string>
    <string name="notification">Notifications</string>
    <string name="dialog_title_select_note">Select Note</string>
    <string name="reserve_table">Reserve</string>
    <string name="cancel_string">Cancel</string>
    <string name="my_serving">My Serving</string>
    <string name="my_unoccupy">Unoccupied</string>
    <string name="apply">APPLY</string>
    <string name="reset">RESET</string>
    <string name="title_filter_menu">My Filter</string>
    <string name="filter_category">Select Category</string>
    <string name="Bill_details_title">Billing Details</string>
    <string name="MenuItem">Order</string>
    <string name="BillingQty">Qty</string>
    <string name="BillingAmt">Amount</string>
    <string name="Bill_Summary">Bill Summary</string>
    <string name="Payment_by">Payment by</string>
    <string-array name="payment_String_array">
        <item>Cash</item>
        <item>Debit/Credit card</item>
        <item>Cheque</item>
    </string-array>
    <string name="payment_option_screen">Payment Option</string>
    <string name="add_customer">Add Customer</string>
    <string name="Payment_close">Close</string>
    <string name="table_no_hint">Table Number</string>
    <string name="table_hint_customer_name">Customer Name</string>
    <string name="dialog_title_Allocate">Allocate Table</string>
    <string name="error_table_no">Table Number is required</string>
    <string name="error_no_item_selected">You can not take empty request</string>
    <string name="BillDetails">Bill Details</string>
    <string name="title_search_table">Search Table</string>
    <string name="title_search_cuisine">Search Cuisine/Menu</string>
    <string name="btn_pay_now">Pay Now</string>
    <string name="order_place_success">Order Place Successfully</string>
    <string name="nav_waiting_list">Waiting List</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_about_us">About Us</string>
    <string name ="completed_Orders">Completed Orders</string>>
    <string name="hint_restaurant_id">Enter Restaurant Id</string>
    <string name="error_select_restaurant">Id Must be a Number</string>
    <string name="error_select_restaurant_id">Restaurant Id is needed</string>
    <string name="error_select_restaurant_id_length">Restaurant Id Not Valid</string>
    <string name="network_error">Please Check Internet Connection</string>
    <string name="Ok">Ok</string>
    <string name="feed_back_btn">Thank You</string>
    <string name="alert_dialog">Warning</string>
    <string name="feedback_activity_name">Help us with your Feedback</string>
    <string name="btn_proceed">Proceed</string>
    <string name="about_us"><u>About us</u></string>
    <string name="place_orders">Place Order</string>
    <string name="bill_summary"><u>Bill Summary</u></string>
    <string name="add_customer_wet">Add</string>
    <string name="about_us_content">
        <![CDATA[ <p><b>QuickServe&trade;</b> offers a User-friendly, Reliable and Agile restaurant ordering
         system especially designed for the Dine-in restaurants. This App is multi-faceted,
         effective ordering for Waiter and efficient order fulfilment for Chef.
         App comes with variety of features like Table occupancy chart, Menu filtering,
         Suggestive favourite menu, Bill generation, Updates for waiter and chef,
         Waiting list preparation,Instant updates for all. </p>
         <p><b>QuickServe&trade;</b> is all-in-one app for all types of restaurants with easy-to-use functions
         which needs lesser training for the staff. Admin panel accompanying the App, provides vital
         strategic functions like Sales forecasting, Graphs and Charts for Billing, Food item
         ranking based on past orders. </p>
         <p>For more information or tie-ups, please visit our website
          <a href ="http://www.vibeosys.com">www.vibeosys.com</a> </p>
         <p>For business inquiries please contact
          <a href ="mailto:info@vibeosys.com?Subject=Business%20Inquiry">info@vibeosys.com</a></p>
          <p><b>QuickServe&trade;</b> is a registered trademark of Vibeosys Software Pvt Ltd. </p>
        ]]>
        </string>
    <string name="previous_orders">Previous Orders</string>
    <string name="add_note">Add Note</string>
    <string name="skip_btn">SKIP</string>
    <string name="empty_order_place">You Can not place an empty order.</string>
    <string name="order_is_pending_to_serve">At least one order is not served</string>
    <string name="generate_bill">Bill</string>
    <string name="error_dialog_title_registration">Registration Error</string>
    <string name="msg_dialog_title_registration">Your Device is not register with server. Contact Admin.</string>
    <string name="error_msg_title_for_network">Network Error</string>
    <string name="error_msg_for_select_restaurant">Internet connection is not available.Please
        check internet connection</string>
    <string name="error_msg_title_for_server">Server Error</string>
    <string name="error_msg_for_server_details">Your order is not placed </string>
    <string name="error_msg_for_server_details_bill">Your bill is not generated </string>
    <string name="str_reset">All Menu Items</string>
    <string name="str_non_veg">Non Veg Only</string>
    <string name="veg">Veg Only</string>
    <string name="company_info">
       <![CDATA[  <p style="text-align:center"><b>QuickServe&trade;</b> is product of Vibeosys Software Pvt.Ltd.For business inquiries
        please contact  <a href ="mailto:info@vibeosys.com?Subject=Business%20Inquiry">info@vibeosys.com</a></p> ]]>
        </string>
    <string name="version_no">QuickServe V.</string>

    <string name="printer_option">Print Option</string>
    <string name="printer_selection">Select Printer</string>
    <string name="print_kot_title">Print KOT</string>
    <string name="print_kot_summary">Set the KOT printer setting to print the KOT</string>
    <string name="print_kot_edit_hint">KOT Printer Ip e.g. 192.168.1.1</string>

    <string name="print_bill_title">Print Bill</string>
    <string name="print_bill_summary">Set the Bill printer setting to \n print the Bill</string>
    <string name="print_bill_edit_hint">Bill Printer Ip e.g. 192.168.1.2</string>

    <string name="discount_per_hint">Discount</string>
    <string name="discount_btn">Discount</string>
    <string name="customer_name">Name</string>
    <string name="customer_hint_address">Customer Address</string>
    <string name="address">Address</string>
    <string name="source">Source</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="quick_serve_tm">
        <![CDATA[ <strong>Quick</strong><small>Serve</small>&trade;]]>
        </string>
    <string name="custPhNo">Phone Number</string>
    <string name="dialog_fragment_msg">Please wait ...</string>

    <string name="dialog_access_denied">Access Denied</string>
    <string name="access_denied_place_order">You have not access to place order contact to your manager</string>
    <string name="access_denied_print_bill">You have not access to print bill contact to your manager</string>
    <string name="beverages">Beverages</string>
    <string name="printer_error_title"> Printer Error</string>
    <string name="done">Done</string>

    <string name="search_printer_btn">Search Printer</string>
    <string name="print_kot_btn_diagnostic">Print KOT</string>
    <string name="print_bill_btn_diagnostic">Print Billing</string>
    <string name="diagnostic_title">Diagnostic</string>
    <string name="diagnostic_switch_print">Search For Printer</string>
    <string name="diagnostic_switch_internet">Search For Internet</string>
    <string name="diagnostic_switch_api">Check API for availability </string>
    <string name="diagnostic_data_base">Data base availiblity</string>
    <string name="diagnostic_alert_title">Result Message</string>
    <string name="diagnostic_internet_available">Internet is available</string>
    <string name="diagnostic_internet_not_available">Internet is not available</string>
    <string name="diagnostic_data_base_available">Data base is available</string>
    <string name="diagnostic_data_base_not_available">Data base is not available</string>
    <string name="diagnostic_api_available">API is available</string>
</resources>
