<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/printer_option">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefPrintKOT"
            android:summary="@string/print_kot_summary"
            android:title="@string/print_kot_title"></SwitchPreference>
        <EditTextPreference
            android:enabled="false"
            android:key="prefKOTIp"
            android:title="@string/print_kot_edit_hint"></EditTextPreference>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefPrintBill"
            android:summary="@string/print_bill_summary"
            android:title="@string/print_bill_title"></SwitchPreference>
        <EditTextPreference
            android:enabled="false"
            android:key="prefBillIp"
            android:title="@string/print_bill_edit_hint"></EditTextPreference>

    </PreferenceCategory>
</PreferenceScreen>