<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Bill_details_title"
        android:padding="4dp"
        style="@style/largeText_bold_bill"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MenuItem"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/largeTextBillingDtl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BillingQty"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/largeTextBillingDtl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BillingAmt"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/largeTextBillingDtl"/>

    </LinearLayout>
    
</LinearLayout>