<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_footer"
        android:background="@color/transparent_back" />

    <ScrollView
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/dialog_fill_colour"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/dlg_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="title"
                    android:textColor="@color/White"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_toEndOf="@+id/dlg_title"
                    android:src="@drawable/ic_action_cancel_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/customer_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/table_hint_customer_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/address"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtCustomerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_hint_address"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/source"
                    android:textSize="15sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/discount_btn"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtDiscountPer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discount_per_hint"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/delivery_charges"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtDeliveryChrgs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/delivery_charges"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txtCancel"
                        style="@style/layout_cancel_button_style"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/cancel_string" />

                    <TextView
                        android:id="@+id/txtApply"
                        style="@style/layout_ok_button_style"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/place_orders" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>