<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.vibeosys.quickserve.views.CustomEditText
            android:id="@+id/txtDiscountPer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:hint="@string/discount_per_hint"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1">

            <com.vibeosys.quickserve.views.CustomTextView
                android:id="@+id/txtCancel"
                style="@style/layout_cancel_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel_string" />

            <com.vibeosys.quickserve.views.CustomTextView
                android:id="@+id/txtDiscount"
                style="@style/layout_ok_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/discount_btn" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>